--- a/404.html
+++ b/404.html
@@ -1,1 +1,97 @@
 
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8"/>
+    <meta httpequiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1.00001,viewport-fit=cover"/>
+    <title>Portals.net</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
+    <link rel="shortcut icon" href="/favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;1,400&display=swap" rel="stylesheet">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-touch-fullscreen" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Portals.net"
+    ><meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="apple-touch-icon" sizes="180x180" href="/pwa/apple-touch-icon/apple-touch-icon-180.png">
+    <link rel="apple-touch-startup-image" media="screen and (device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/pwa/apple-touch-startup-image/apple-touch-startup-image-640x1136.png">
+    <link rel="apple-touch-startup-image" media="screen and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/pwa/apple-touch-startup-image/apple-touch-startup-image-1242x2688.png"
+    ><link rel="apple-touch-startup-image" media="screen and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/pwa/apple-touch-startup-image/apple-touch-startup-image-828x1792.png">
+    <link rel="apple-touch-startup-image" media="screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/pwa/apple-touch-startup-image/apple-touch-startup-image-1125x2436.png">
+    <link rel="apple-touch-startup-image" media="screen and (device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)" href="/pwa/apple-touch-startup-image/apple-touch-startup-image-1242x2208.png">
+    <link rel="apple-touch-startup-image" media="screen and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/pwa/apple-touch-startup-image/apple-touch-startup-image-750x1334.png">
+    <link rel="apple-touch-startup-image" media="screen and (device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/pwa/apple-touch-startup-image/apple-touch-startup-image-2048x2732.png">
+    <link rel="apple-touch-startup-image" media="screen and (device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/pwa/apple-touch-startup-image/apple-touch-startup-image-1668x2388.png">
+    <link rel="apple-touch-startup-image" media="screen and (device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/pwa/apple-touch-startup-image/apple-touch-startup-image-1668x2224.png">
+    <link rel="apple-touch-startup-image" media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/pwa/apple-touch-startup-image/apple-touch-startup-image-1536x2048.png">
+  </head>
+<body>
+  <img
+    src="static/media/plain_shadow_logo.759accfc.png"
+    class="mainImg"
+  />
+  <span class="titleText">
+    Website Coming Soon
+  </span>
+  <a href="https://apps.apple.com/us/app/portals-net/id1530638981" target="_blank">
+    <img
+      src="appstore.png"
+      width='240'
+      height='80'
+      viewBox='0 0 240 80'
+    />
+  </a>
+  <a href="https://play.google.com/store/apps/details?id=net.mystify" target="_blank">
+    <img
+      src="google-play-badge.png"
+      width='240'
+      height='92.5'
+      viewBox='0 0 240 80'
+    />
+  </a>
+  <div class="linkContainer">
+    <a class="linkText" href="privacy.html">Privacy Policy</a>
+    <a class="linkText" href="support.html">Support</a>
+  </div>
+  <!-- <View
+    style={{
+      flexDirection: 'row',
+      justifyContent: 'space-between',
+      width: 300,
+      marginTop: 40,
+    }}
+  >
+    <Link to='/privacy' style={{ color: 'white' }}>
+      <Text
+        style={{
+          fontFamily: 'OpenSans_400Regular',
+          fontSize: 18,
+          paddingVertical: 5,
+          color: 'white',
+          // borderBottomColor: 'white',
+          // borderBottomWidth: 1,
+        }}
+      >
+        Privacy Policy
+      </Text>
+    </Link>
+    <Link to='/support'>
+      <Text
+        style={{
+          fontFamily: 'OpenSans_400Regular',
+          fontSize: 18,
+          paddingVertical: 5,
+          color: 'white',
+        }}
+      >
+        Support
+      </Text>
+    </Link>
+  </View> -->
+</body>
+</html>
+
