--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
   <span class="titleText">
     Thanks for the test run
   </span>
-  
+   <div class="linkContainer">
+    <a class="linkText" href="privacy.html">Privacy Policy</a>
+    <a class="linkText" href="support.html">Support</a>
+  </div>
   <!-- <View
     style={{
       flexDirection: 'row',
