--- a/404.html
+++ b/404.html
@@ -30,29 +30,11 @@
     <link rel="apple-touch-startup-image" media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)" href="/pwa/apple-touch-startup-image/apple-touch-startup-image-1536x2048.png">
   </head>
 <body>
-  <img
-    src="static/media/plain_shadow_logo.759accfc.png"
-    class="mainImg"
-  />
+ 
   <span class="titleText">
-    Website Coming Soon
+    Thanks for the test run
   </span>
-  <a href="https://apps.apple.com/us/app/portals-net/id1530638981" target="_blank">
-    <img
-      src="appstore.png"
-      width='240'
-      height='80'
-      viewBox='0 0 240 80'
-    />
-  </a>
-  <a href="https://play.google.com/store/apps/details?id=net.mystify" target="_blank">
-    <img
-      src="google-play-badge.png"
-      width='240'
-      height='92.5'
-      viewBox='0 0 240 80'
-    />
-  </a>
+  
   <div class="linkContainer">
     <a class="linkText" href="privacy.html">Privacy Policy</a>
     <a class="linkText" href="support.html">Support</a>
