--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+  <!--<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
@@ -90,6 +90,7 @@
         Support
       </Text>
     </Link>
-  </View> -->
+  </View>
 </body>
-</html>
+</html>-->
+portals.net
